@@ -136,6 +136,7 @@ fixed bugs:
 - fixed bug with uncatched LPSOLSTAT after hitting a time or iteration limit
 - fixed bug with wrong update of activities in linear constraints after global upper bound changes
 - avoid fixing variables to infinity in order to get rid of numerical inconsistencies in the original model
+- fixed bug in reader_ppm while appending strings for output file
 
 
 SCIP version 1.00
